@@ -137,6 +137,9 @@ BOOL WgxSaveOptions(char *config_file_path,WGX_OPTION *opts_table,WGX_SAVE_OPTIO
 BOOL WgxSetTaskbarIconOverlay(HWND hWindow,HINSTANCE hInstance,int resource_id, wchar_t *description);
 BOOL WgxRemoveTaskbarIconOverlay(HWND hWindow);
 
+BOOL WgxCreateProcess(char *cmd,char *args);
+BOOL WgxCreateThread(LPTHREAD_START_ROUTINE routine,LPVOID param);
+
 /* wgx macro definitions */
 
 /*
